# unity2godot

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  SPEC.md  imgui.ini
src/: main.cpp
src/converter/: camera_converter.cpp  camera_converter.h  converter.cpp  converter.h  coord_convert.h  guid_table.cpp  guid_table.h  light_converter.cpp  light_converter.h  material_converter.cpp  material_converter.h  package_extractor.cpp  package_extractor.h  prefab_converter.cpp  prefab_converter.h  project_writer.cpp  project_writer.h  scene_converter.cpp  scene_converter.h  texture_converter.cpp  texture_converter.h  unity_yaml_parser.cpp  unity_yaml_parser.h
src/gui/: app_window.cpp  app_window.h  converter_ui.cpp  converter_ui.h
src/util/: log.h  types.h
test/: test.unitypackage
test/Legacy/Assets/_Project/: Scene.unity  monkey.mat  monkey.prefab
test/Legacy/ProjectSettings/: ProjectSettings.asset
test/URP/Assets/: New Universal Render Pipeline Asset.asset  UniversalRenderPipelineGlobalSettings.asset
test/URP/Assets/_Project/: Scene.unity  monkey.fbx  monkey.mat  monkey.prefab
test/URP/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
test/godot/: project.godot
test/godot/_Project/: Scene.tscn  monkey.fbx.import  monkey.tres  monkey.tscn
test/godot/_Project/Scenes/: SampleScene.tscn
